crates/ruff_linter/src/rules/pydocstyle/snapshots/ruff_linter__rules__pydocstyle__tests__bom.snap
---
source: crates/ruff_linter/src/rules/pydocstyle/mod.rs
---
D300 [*] Use triple double quotes `"""`
 --> bom.py:1:1
  |
1 | ''' SAM macro definitions '''
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: Convert to triple double quotes
  |
1 - ﻿''' SAM macro definitions '''
1 + ﻿""" SAM macro definitions """
  |
