crates/ruff_linter/src/rules/pydocstyle/snapshots/ruff_linter__rules__pydocstyle__tests__d209_d400.snap
---
source: crates/ruff_linter/src/rules/pydocstyle/mod.rs
---
D209 [*] Multi-line docstring closing quotes should be on a separate line
 --> D209_D400.py:2:5
  |
1 |   def lorem():
2 | /     """lorem ipsum dolor sit amet consectetur adipiscing elit
3 | |     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua"""
  | |________________________________________________________________________^
help: Move closing quotes to new line
  |
3 ~     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
4 ~     """
  |

D400 [*] First line should end with a period
 --> D209_D400.py:2:5
  |
1 |   def lorem():
2 | /     """lorem ipsum dolor sit amet consectetur adipiscing elit
3 | |     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua"""
  | |________________________________________________________________________^
help: Add period
  |
3 |     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."""
  |                                                                      +
note: This is an unsafe fix and may change runtime behavior
