crates/ruff_linter/src/rules/pydocstyle/snapshots/ruff_linter__rules__pydocstyle__tests__d417_google.snap
---
source: crates/ruff_linter/src/rules/pydocstyle/mod.rs
---
D417.py:1:5: D417 Missing argument descriptions in the docstring for `f`: `y`, `z`
  |
1 | def f(x, y, z):
  |     ^ D417
2 |     """Do something.
  |

D417.py:14:5: D417 Missing argument descriptions in the docstring for `f`: `y`, `z`
   |
14 | def f(x, y, z):
   |     ^ D417
15 |     """Do something.
   |

D417.py:27:5: D417 Missing argument descriptions in the docstring for `f`: `y`, `z`
   |
27 | def f(x, y, z):
   |     ^ D417
28 |     """Do something.
   |

D417.py:39:5: D417 Missing argument descriptions in the docstring for `f`: `y`, `z`
   |
39 | def f(x, y, z):
   |     ^ D417
40 |     """Do something.
   |

D417.py:52:5: D417 Missing argument description in the docstring for `f`: `y`
   |
52 | def f(x, y, z):
   |     ^ D417
53 |     """Do something.
   |

D417.py:65:5: D417 Missing argument description in the docstring for `f`: `y`
   |
65 | def f(x, y, z):
   |     ^ D417
66 |     """Do something.
   |

D417.py:77:5: D417 Missing argument description in the docstring for `f`: `y`
   |
77 | def f(x, y, z):
   |     ^ D417
78 |     """Do something.
   |

D417.py:98:5: D417 Missing argument description in the docstring for `f`: `x`
   |
98 | def f(x, *args, **kwargs):
   |     ^ D417
99 |     """Do something.
   |

D417.py:108:5: D417 Missing argument description in the docstring for `f`: `*args`
    |
108 | def f(x, *args, **kwargs):
    |     ^ D417
109 |     """Do something.
    |


