crates/ruff_linter/src/rules/pydocstyle/snapshots/ruff_linter__rules__pydocstyle__tests__d417_google_ignore_var_parameters.snap
---
source: crates/ruff_linter/src/rules/pydocstyle/mod.rs
---
D417 Missing argument descriptions in the docstring for `f`: `y`, `z`
 --> D417.py:1:5
  |
1 | def f(x, y, z):
  |     ^
  |

D417 Missing argument descriptions in the docstring for `f`: `y`, `z`
  --> D417.py:14:5
   |
14 | def f(x, y, z):
   |     ^
   |

D417 Missing argument descriptions in the docstring for `f`: `y`, `z`
  --> D417.py:27:5
   |
27 | def f(x, y, z):
   |     ^
   |

D417 Missing argument descriptions in the docstring for `f`: `y`, `z`
  --> D417.py:39:5
   |
39 | def f(x, y, z):
   |     ^
   |

D417 Missing argument description in the docstring for `f`: `y`
  --> D417.py:52:5
   |
52 | def f(x, y, z):
   |     ^
   |

D417 Missing argument description in the docstring for `f`: `y`
  --> D417.py:65:5
   |
65 | def f(x, y, z):
   |     ^
   |

D417 Missing argument description in the docstring for `f`: `y`
  --> D417.py:77:5
   |
77 | def f(x, y, z):
   |     ^
   |

D417 Missing argument description in the docstring for `f`: `x`
  --> D417.py:98:5
   |
98 | def f(x, *args, **kwargs):
   |     ^
   |

D417 Missing argument description in the docstring for `select_data`: `auto_save`
   --> D417.py:155:5
    |
155 | def select_data(
    |     ^^^^^^^^^^^
    |

D417 Missing argument description in the docstring for `should_fail`: `Args`
   --> D417.py:199:5
    |
199 | def should_fail(payload, Args):
    |     ^^^^^^^^^^^
    |

D417 Missing argument description in the docstring for `function_with_unpack_and_missing_arg_doc_should_fail`: `query`
   --> D417.py:238:5
    |
238 | def function_with_unpack_and_missing_arg_doc_should_fail(query: str, **kwargs: Unpack[User]):
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |
