crates/ruff_linter/src/rules/pydocstyle/snapshots/ruff_linter__rules__pydocstyle__tests__empty-docstring-section_sections.py.snap
---
source: crates/ruff_linter/src/rules/pydocstyle/mod.rs
---
D414 Section has no content ("Returns")
  --> sections.py:56:5
   |
54 |     """Toggle the gizmo.
55 |
56 |     Returns
   |     ^^^^^^^
57 |
58 |     """
   |

D414 Section has no content ("Returns")
  --> sections.py:67:5
   |
65 |     """Toggle the gizmo.
66 |
67 |     Returns"""
   |     ^^^^^^^

D414 Section has no content ("Returns")
  --> sections.py:78:5
   |
76 |     """Toggle the gizmo.
77 |
78 |     Returns
   |     ^^^^^^^
79 |     -------
80 |     Yields
   |

D414 Section has no content ("Yields")
  --> sections.py:80:5
   |
78 |     Returns
79 |     -------
80 |     Yields
   |     ^^^^^^
81 |     ------
   |

D414 Section has no content ("Returns")
   --> sections.py:172:5
    |
170 |     """Toggle the gizmo.
171 |
172 |     Returns
    |     ^^^^^^^
173 |         -------
174 |     """
    |

D414 Section has no content ("Returns")
   --> sections.py:266:5
    |
264 |         note: A random string.
265 |
266 |     Returns:
    |     ^^^^^^^
267 |
268 |     Raises:
    |

D414 Section has no content ("Returns")
   --> sections.py:563:9
    |
561 |         Here's a note.
562 |
563 |         Returns:
    |         ^^^^^^^
564 |     """
    |
