crates/ruff_linter/src/rules/pydocstyle/snapshots/ruff_linter__rules__pydocstyle__tests__empty-docstring_D.py.snap
---
source: crates/ruff_linter/src/rules/pydocstyle/mod.rs
---
D419 Docstring is empty
  --> D.py:20:9
   |
19 |     class meta:
20 |         """"""
   |         ^^^^^^
21 |
22 |     @expect('D102: Missing docstring in public method')
   |

D419 Docstring is empty
  --> D.py:74:5
   |
72 | @expect('D419: Docstring is empty')
73 | def function():
74 |     """ """
   |     ^^^^^^^
75 |     def ok_since_nested():
76 |         pass
   |

D419 Docstring is empty
  --> D.py:80:9
   |
78 |     @expect('D419: Docstring is empty')
79 |     def nested():
80 |         ''
   |         ^^
